# ccao

./: .Rbuildignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  DESCRIPTION  NAMESPACE  README.Rmd  README.md  _pkgdown.yml
.github/ISSUE_TEMPLATE/: update-data-dictionary.md
.github/workflows/: docs.yaml  pypi-publish.yaml  pytest-coverage.yaml  python-build-and-test.yaml  test-coverage.yaml
R/: address_funs.R  assmnt_funs.R  ccao_funs.R  chars_funs.R  check_funs.R  data.R  format_funs.R  map_funs.R  model_funs.R  pin_funs.R  recp_funs.R  sql_funs.R  sysdata.rda  town_funs.R  valuation_funs.R  vars_funs.R
data/: appeals_dict.rda  chars_cols.rda  chars_dict.rda  chars_sample_addchars.rda  chars_sample_athena.rda  chars_sample_universe.rda  chars_sample_universe_updated.rda  class_dict.rda  coe_codes.rda  equalization_factors.rda  nbhd_recode.rda  nbhd_shp.rda  town_dict.rda  town_shp.rda  vars_dict.rda
data-raw/: ccao_colors.R  ccao_ids.R  chars_cols.R  chars_sample.R  chars_sample_athena.csv  chars_sample_hie.csv  class_dict.R  coe_codes.R  coe_dict.R  coe_dict.csv  equalization_factors.R  equalization_factors.csv  nbhd_shp.R  nbhd_shp.geojson  package dev workspace.R  sysdata.R  town_shp.R  town_shp.geojson  vars_dict.R  vars_dict.csv  vars_dict_legacy.R  vars_dict_legacy.csv
man/: appeals_dict.Rd  ccao_colors.Rd  ccao_funs.Rd  ccao_generate_id.Rd  cdu_dict.Rd  chars_288_active.Rd  chars_cols.Rd  chars_dict.Rd  chars_fix_age.Rd  chars_sample_addchars.Rd  chars_sample_athena.Rd  chars_sample_hie.Rd  chars_sample_universe.Rd  chars_sample_universe_updated.Rd  chars_sparsify.Rd  chars_update.Rd  check_class.Rd  class_dict.Rd  cod_func.Rd  coe_codes.Rd  coe_dict.Rd  dot-batch_query_address.Rd  dot-group_validation.Rd  dot-preprocess_address_data.Rd  equalization_factors.Rd  format_as400.Rd  map_kriging.Rd  model_axe_recipe.Rd  model_axe_tune_data.Rd  model_get_env.Rd  model_lgbm_cap_num_leaves.Rd  model_lgbm_load.Rd  model_lgbm_save.Rd  model_lgbm_update_params.Rd  model_predict.Rd  nbhd_recode.Rd  nbhd_shp.Rd  pin_clean.Rd  pin_format_pretty.Rd  postval_model.Rd  (+23 more)
python/: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
python/ccao/: __init__.py  vars_funs.py
python/ccao/data/: vars_dict.csv  vars_dict_legacy.csv
python/docs/source/: authors.rst  conf.py  index.rst  reference.rst  vars_dict.rst  vars_recode.rst  vars_rename.rst
python/tests/: conftest.py  test_vars_funs.py
python/tests/fixtures/: chars_sample_athena.csv  chars_sample_hie.csv
renv/: activate.R
scripts/: check-vars-dict.R  validate-vars-dict.R
tests/: testthat.R
tests/testthat/: test-address_funs.R  test-assmnt_funs.R  test-ccao_funs.R  test-chars_funs.R  test-check_funs.R  test-format_funs.R  test-map_funs.R  test-model_funs.R  test-pin_funs.R  test-recp_funs.R  test-sql_funs.R  test-town_funs.R  test-valuation_funs.R  test-vars_funs.R
vignettes/: cleaning-and-recoding.Rmd  creating-kriging-maps.Rmd  working-with-288-data.Rmd
