[project]
name = "ccao"
version = "1.3.0"
description = "Convenience Functions and Datasets for the Cook County Assessor's Office"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Dan Snow", email="daniel.snow@cookcountyil.gov"},
    {name = "Jean Cochrane", email="jean.cochrane@cookcountyil.gov"},
]
dependencies = [
    "pandas>=2.2.3",
]

[project.optional-dependencies]
test = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.4",
]
docs = [
    "Sphinx>=8.1.3",
    "myst-parser>=4.0.0",
    "pydata-sphinx-theme>=0.16.0",
    "sphinx-pyproject>=0.3.0"
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.sphinx-pyproject]
github_username = "ccao-data"
github_repository = "ccao"
project = "ccao"
copyright = "2024, Cook County Assessor's Office"
language = "en"
extensions = [
  "sphinx.ext.autodoc",
  "sphinx.ext.doctest",
  "myst_parser"
]
# templates_path = ["_templates"]
highlight_language = "none"
html_theme = "pydata_sphinx_theme"
html_logo = "../images/logo.png"
html_show_copyright = false
