[project]
name = "ccao"
version = "1.3.0"
description = "Convenience Functions and Datasets for the Cook County Assessor's Office"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Jean Cochrane", email="jean.cochrane@cookcountyil.gov"},
    {name = "Dan Snow", email="daniel.snow@cookcountyil.gov"},
]
dependencies = [
    "pandas>=1.4.0,<=2.3.0",
    "numpy>=1.23.0,<=2.2.0"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff",
]
docs = [
    "Sphinx",
    "myst-parser",
    "pydata-sphinx-theme",
    "sphinx-pyproject",
    "sphinx-autobuild"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.csv"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.sphinx-pyproject]
github_username = "ccao-data"
github_repository = "ccao"
project = "ccao"
copyright = "2024, Cook County Assessor's Office"
language = "en"
extensions = [
  "sphinx.ext.autodoc",
  "sphinx.ext.doctest",
  "myst_parser"
]
highlight_language = "none"
html_theme = "pydata_sphinx_theme"
html_logo = "../images/logo.png"
html_show_copyright = false
